--- a/packaging/rpm/README
+++ b/packaging/rpm/README
@@ -3,6 +3,66 @@ RPM package for Fedora that still relies on Maven to include the JAVA
 artifacts. The plan is to create a dependencies RPM to package up all the
 artifacts.
 
+Release 0.1.0-0.7.0
+--------------------------------------------------------------------------------
+1. Build
+cd ~/git/controller
+git archive --prefix=opendaylight-controller-0.1.0/ HEAD | xz > ../opendaylight-controller-0.1.0.tar.xz
+cd ~/git/integration
+git archive --prefix=opendaylight-integration-0.1.0/ HEAD | xz > ../opendaylight-integration-0.1.0.tar.xz
+cd ~/git/ovsdb
+git archive --prefix=opendaylight-ovsdb-0.1.0/ HEAD | xz > ../opendaylight-ovsdb-0.1.0.tar.xz
+cd ~/git/openflowjava
+git archive --prefix=opendaylight-openflowjava-0.1.0/ HEAD | xz > ../opendaylight-openflowjava-0.1.0.tar.xz
+cd ~/git/openflowplugin
+git archive --prefix=opendaylight-openflowplugin-0.1.0/ HEAD | xz > ../opendaylight-openflowplugin-0.1.0.tar.xz
+cd ..
+cp opendaylight-controller-0.1.0.tar.xz ~/rpmbuild/SOURCES
+cp opendaylight-integration-0.1.0.tar.xz ~/rpmbuild/SOURCES
+cp opendaylight-ovsdb-0.1.0.tar.xz ~/rpmbuild/SOURCES
+cp opendaylight-openflowjava-0.1.0.tar.xz ~/rpmbuild/SOURCES
+cp opendaylight-openflowplugin-0.1.0.tar.xz ~/rpmbuild/SOURCES
+cp intergration/packaging/rpm/opendaylight-integration-fix-paths.patch ~/rpmbuild/SOURCES/
+rpmbuild -bb --noclean opendaylight-controller.spec
+rpmbuild -bb --noclean opendaylight-ovsdb.spec
+rpmbuild -bb --noclean opendaylight-openflowjava.spec
+rpmbuild -bb --noclean opendaylight-openflowplugin.spec
+cp ~/rpmbuild/BUILD/opendaylight-controller-0.1.0/opendaylight/distribution/opendaylight/target/distribution.opendaylight-osgipackage.zip ~/rpmbuild/SOURCES/opendaylight-controller-0.1.0.zip
+cp ~/rpmbuild/BUILD/opendaylight-ovsdb-0.1.0/distribution/opendaylight/target/distribution.ovsdb-1.0.0-SNAPSHOT-osgipackage.zip ~/rpmbuild/SOURCES/opendaylight-ovsdb-0.1.0.zip
+rpmbuild -bb --noclean opendaylight-controller-dependencies.spec
+rpmbuild -bb --noclean opendaylight-distribution.spec
+
+2. Install
+rpm -Uvh ~/rpmbuild/RPMS/noarch/*.rpm
+
+3. Enable
+sudo systemctl enable opendaylight-controller.service
+
+4. Start/stop
+sudo systemctl start opendaylight-controller.service
+sudo systemctl stop opendaylight-controller.service
+* to get the osgi console: telnet 127.0.0.1 2400
+
+5. Distribution
+Edit the sysconfig file to change the type of distribution:
+sudo vi /etc/sysconfig/opendaylight-controller
+Set ODL_DIST to the desired distribution, i.e.
+ODL_DIST="virt-ovsdb"
+
+# Use the following table to select the distribution:
+# Distribution             Value
+# --------------------     -----------
+# base                     base
+# virtualization ovsdb     virt-ovsdb
+# virtualization vtn       virt-vtn
+# virtualization opendove  virt-opendove
+# service provider         sp
+ODL_DIST="virt-ovsdb"
+
+# Any additional options required.
+# I.E. -of13, -debug, or -console
+ODL_OPTS=""
+
 Release 0.1.0-0.6.0
 --------------------------------------------------------------------------------
 1. Build
@@ -39,7 +99,7 @@ sudo systemctl stop opendaylight-controller.service
 Edit the sysconfig file to change the type of distribution:
 sudo vi /etc/sysconfig/opendaylight-controller
 Set ODL_DIST to the desired distribution, i.e.
-ODL_DEST="virt-ovsdb"
+ODL_DIST="virt-ovsdb"
 
 # Use the following table to select the distribution:
 # Distribution             Value
@@ -77,7 +137,7 @@ sudo systemctl stop opendaylight-controller.service
 Edit the sysconfig file to change the type of distribution:
 sudo vi /etc/sysconfig/opendaylight-controller
 Set ODL_DIST to the desired distribution, i.e.
-ODL_DEST="-virt ovsdb" or ODL_DEST="-virt opendove"
+ODL_DIST="-virt ovsdb" or ODL_DIST="-virt opendove"
 
 Release <0.1.0-0.4.0
 
@@ -150,3 +210,4 @@ the lib and plugin directories
 /var/lib/opendaylight-controller/configuration/ ln's back to /usr/share/opendaylight-controller/configuration
 /var/lib/opendaylight-controller/lib
 /var/lib/opendaylight-controller/plugins
+
