Add distribution support to buildrpm.sh script.
- Update script to include building the ovsdb and distribution rpms.
- Modularized parts of the script to make it easier to add in future projects that need to be included.
- Added a buildtag option to tag the output build directory.
- Added mockdebug option to enable or disable the mock debug.
- Cleaned up and added some logging.
- Added mockinit option to init mock.

Change-Id: Iaef906b365ee24d1bb7dd04d3b550bfa22bfaac7
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/packaging/rpm/README
+++ b/packaging/rpm/README
@@ -16,6 +16,7 @@ cd ..
 cp opendaylight-controller-0.1.0.tar.xz ~/rpmbuild/SOURCES
 cp opendaylight-integration-0.1.0.tar.xz ~/rpmbuild/SOURCES
 cp opendaylight-ovsdb-0.1.0.tar.xz ~/rpmbuild/SOURCES
+cp ~/git/integration/packaging/rpm/opendaylight-integration-fix-paths.path ~/rpmbuild/SOURCES
 rpmbuild -bb --noclean opendaylight-controller.spec
 rpmbuild -bb --noclean opendaylight-ovsdb.spec
 cp ~/rpmbuild/BUILD/opendaylight-controller-0.1.0/opendaylight/distribution/opendaylight/target/distribution.opendaylight-osgipackage.zip ~/rpmbuild/SOURCES/opendaylight-controller-0.1.0.zip
